# Setup information - see below for dev tool configuration
[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "soft7"
authors = [
    {name = "Thomas Fjæstad Hagelien", email = "thomas.f.hagelien@sintef.no"},
    {name = "Casper Welzel Andersen", email = "casper.w.andersen@sintef.no"},
    {name = "Treesa Rose Joseph", email = "treesa.joseph@sintef.no"},
]
description = "SOFT7 semantic interoperability framework."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
keywords = ["interoperability", "semantic"]
requires-python = "~=3.9"
dynamic = ["version"]

dependencies = [
    "httpx~=0.26.0",
    "oteapi-core>=0.6.1,<1",
    "pyyaml~=6.0",
    "typing-extensions~=4.9; python_version < '3.12'",
]

# Other dependencies governed by oteapi-core:
# - pydantic

[project.optional-dependencies]
testing = [
    "pytest~=8.0",
    "pytest-cov~=4.1",
    "pytest-httpx~=0.29.0",
]
dev = [
    "pre-commit~=3.6",
    "soft7[testing]",
]

[project.urls]
Home = "https://github.com/SINTEF/soft7"
Documentation = "https://SINTEF.github.io/soft7"
Source = "https://github.com/SINTEF/soft7"
"Issue Tracker" = "https://github.com/SINTEF/soft7/issues"
Changelog = "https://github.com/SINTEF/soft7/blob/main/CHANGELOG.md"
Package = "https://pypi.org/project/soft7"

# Register OTEAPI strategies
[project.entry-points."oteapi.function"]
"soft7.soft7" = "s7.oteapi_plugin.soft7_function:SOFT7Generator"
"soft7.SOFT7" = "s7.oteapi_plugin.soft7_function:SOFT7Generator"
"soft7.soft" = "s7.oteapi_plugin.soft7_function:SOFT7Generator"
"soft7.SOFT" = "s7.oteapi_plugin.soft7_function:SOFT7Generator"
[project.entry-points."oteapi.parse"]
"soft7.application/yaml" = "s7.oteapi_plugin.yaml_parser:YAMLDataParseStrategy"
"soft7.text/x-yaml" = "s7.oteapi_plugin.yaml_parser:YAMLDataParseStrategy"

[tool.flit.module]
name = "s7"

# Dev tool configurations
[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_configs = true
show_error_codes = true
allow_redefinition = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-rs --cov=s7 --cov-report=term-missing"
filterwarnings = [
    "error",  # Fail on any warning

    # Ignore deprecation warnings from importlib.metadata (used by oteapi-core)
    "ignore:SelectableGroups dict interface is deprecated.*:DeprecationWarning",
]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # ruff
  "RUF",

  ## For core code base
  # flake8-blind-except
  "BLE",
  # pylint
  "PL",
]
ignore = [
    # Self assignment of variable
    "PLW0127",
    # too-many-* rules
    # Ignore these, as they are not relevant for our code base
    # We will, e.g., extend the recommended number of branches, statements, function
    # args, etc.
    "PLR09",
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.extend-per-file-ignores]
"docs/**" = ["BLE", "PL"]
"tests/**" = ["BLE", "PL"]
